--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Primera aplicación VITE</title>
+    <title>Desafio 3</title>
   </head>
   <body>
-    <h1>Primera aplicación VITE</h1>
     
     <script type="module" src="/main.js"></script>
   </body>
