terminamos de darle estilo, asignarle una tipografia y listo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
   </head>
   <body>
     
+    <header>
+      <form action="">
+        <fieldset>
+        <h1>Iniciar sesión</h1>
+        <label for="usuario">
+          <input type="text" name="Nombre de usuario" placeholder="Introduzca el nombre del usuario" id="usuario">
+        </label>
+        <label for="password">
+          <input type="password" name="password" placeholder="Introduzca la contraseña" id="password">
+        </label>
+        <button>Iniciar sesión</button>
+        <div></div>
+        <footer>
+          <aside>
+            <h3>¿No se puede iniciar sesión</h3>
+          </aside>
+          <aside>
+            <h3>Regístrese para crear una cuenta nueva</h3>
+          </aside>
+        </footer>
+      </fieldset>
+      </form>
+    </header>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
